<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
<EditText
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:id="@+id/c_name"
    android:hint="@string/enter_company_name"/>
<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/c_ticker"
    android:hint="@string/enter_company_ticker"/>
<Button
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:id="@+id/add_c"
    android:text="@string/add_company"/>
<EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/c_r_ticker"
    android:hint="@string/enter_company_ticker"/>
<Button
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:id="@+id/remove_c"
    android:text="@string/remove_company"/>
<androidx.recyclerview.widget.RecyclerView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
    android:id="@+id/u_comp_list"/>
</LinearLayout>